deploy/k8s/production/ingress-f.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: funnelbarn-f
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: f.pensioenfeest.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: funnelbarn
                port:
                  name: http
    - host: f.scanoo.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: funnelbarn
                port:
                  name: http
    - host: f.scanbarelinks.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: funnelbarn
                port:
                  name: http
  tls:
    - hosts:
        - f.pensioenfeest.nl
        - f.scanoo.nl
        - f.scanbarelinks.nl
